@@ -29,7 +29,7 @@ module NewRelic::Agent::Instrumentation
       # strip of leading ^ and / chars and trailing $ and /
       name.gsub!(%r{^[/^]*(.*?)[/\$]*$}, '\1')
       name = 'root' if name.empty?
-      perform_action_with_newrelic_trace(:name => name) do
+      perform_action_with_newrelic_trace(:category => 'WebTransaction', :path => "Sinatra/#{name}") do
         route_eval_without_newrelic(&block_arg)
       end
     end
